--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@gridsome/transformer-remark": "^0.6.4",
     "@gridsome/vue-remark": "^0.2.6",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "<5.0",
     "bootstrap-vue": "^2.21.2",
     "commander": "^8.1.0",
     "gridsome": "^0.7.0",
     "jiti": "^1.11.0",
+    "jquery": "1.9.1 - 3",
     "node-watch": "^0.7.1",
     "prettier": "^2.3.2",
     "rehype-parse": "^7.0.1",
