--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "gridhub",
-  "private": true,
-  "scripts": {
-    "build": "src/build/run.mjs build",
-    "develop": "src/build/run.mjs develop",
-    "format": "prettier --write 'src/**/{*.js,*.mjs,*.scss,*.vue}' '!src/.temp/**'",
-    "lint": "eslint src/**/*.{mjs,js,vue}"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.2",
-    "@gridsome/source-filesystem": "^0.6.2",
-    "@gridsome/transformer-remark": "^0.6.4",
-    "@gridsome/vue-remark": "^0.2.6",
-    "axios": "^0.21.1",
-    "bootstrap": "<5.0",
-    "bootstrap-vue": "^2.21.2",
-    "commander": "^8.1.0",
-    "gridsome": "^0.7.0",
-    "jiti": "^1.11.0",
-    "jquery": "1.9.1 - 3",
-    "node-watch": "^0.7.1",
-    "prettier": "^2.3.2",
-    "rehype-parse": "^7.0.1",
-    "remark": "^13.0.0",
-    "remark-attr": "^0.11.1",
-    "remark-frontmatter": "^3.0.0",
-    "remark-html": "^13.0.1",
-    "remark-parse": "^9.0.0",
-    "remark-toc": "^8.0.0",
-    "sharp": "^0.28.3",
-    "unified": "^10.1.0",
-    "unified-args": "^9.0.2",
-    "unist-util-visit": "^3.1.0",
-    "which": "^2.0.2"
-  },
-  "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.17.0",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.1"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "tabWidth": 4
-  }
+    "name": "gridhub",
+    "private": true,
+    "scripts": {
+        "build": "src/build/run.mjs build",
+        "develop": "src/build/run.mjs develop",
+        "format": "prettier --write '{*.js,*.json}' 'src/**/{*.js,*.mjs,*.scss,*.vue}' '!src/.temp/**'",
+        "lint": "eslint src/**/*.{mjs,js,vue}"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.2",
+        "@gridsome/source-filesystem": "^0.6.2",
+        "@gridsome/transformer-remark": "^0.6.4",
+        "@gridsome/vue-remark": "^0.2.6",
+        "axios": "^0.21.1",
+        "bootstrap": "<5.0",
+        "bootstrap-vue": "^2.21.2",
+        "commander": "^8.1.0",
+        "gridsome": "^0.7.0",
+        "jiti": "^1.11.0",
+        "jquery": "1.9.1 - 3",
+        "node-watch": "^0.7.1",
+        "prettier": "^2.3.2",
+        "rehype-parse": "^7.0.1",
+        "remark": "^13.0.0",
+        "remark-attr": "^0.11.1",
+        "remark-frontmatter": "^3.0.0",
+        "remark-html": "^13.0.1",
+        "remark-parse": "^9.0.0",
+        "remark-toc": "^8.0.0",
+        "sharp": "^0.28.3",
+        "unified": "^10.1.0",
+        "unified-args": "^9.0.2",
+        "unist-util-visit": "^3.1.0",
+        "which": "^2.0.2"
+    },
+    "devDependencies": {
+        "eslint": "^7.32.0",
+        "eslint-plugin-vue": "^7.17.0",
+        "node-sass": "^5.0.0",
+        "sass-loader": "^10.1.1"
+    },
+    "prettier": {
+        "printWidth": 120,
+        "tabWidth": 4
+    }
 }
