--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
+    "cypress": "^8.4.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.17.0",
     "sass-loader": "^10.1.1"
