--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint src/**/*.{mjs,js,vue}",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test": "start-server-and-test develop http://localhost:8080 cypress:run"
+    "test": "start-server-and-test develop http://localhost:8080 cypress:run",
+    "test:interactive": "start-server-and-test develop http://localhost:8080 cypress:open"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -39,7 +40,9 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
+    "axe-core": "^4.3.3",
     "cypress": "^8.4.0",
+    "cypress-axe": "^0.13.0",
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^7.17.0",
