--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "axe-core": "^4.3.3",
-    "cypress": "^8.4.0",
+    "cypress": "8.4.1",
     "cypress-axe": "^0.13.0",
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.12.1",
