Add super simple http server for prebuilt dist

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "build": "src/build/run.mjs build",
+    "serve": "http-server ./dist/",
     "develop": "src/build/run.mjs develop",
     "format": "prettier --write '*.js' 'src/**/{*.js,*.mjs,*.scss,*.vue}' '!src/.temp/**'",
     "lint": "eslint src/**/*.{mjs,js,vue}",
@@ -46,6 +47,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^7.17.0",
+    "http-server": "^13.0.2",
     "sass-loader": "^10.1.1",
     "start-server-and-test": "^1.14.0"
   },
