--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,13 @@ jobs:
           build: yarn build
           start: yarn serve
           wait-on: 'http://localhost:8080'
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+      - uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
