Only run checks on PR

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,5 @@
 name: Code Quality Checks
-on: [push, pull_request]
+on: pull_request
 concurrency: 
   group: lint-${{ github.head_ref }}
   cancel-in-progress: true
