--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Cypress Tests
-on: [push, pull_request]
+on: pull_request
 concurrency: 
   group: cypress-${{ github.head_ref }}
   cancel-in-progress: true
