--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -23,6 +23,8 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      - name: Install project dependencies
+        run: yarn --prefer-offline
       - name: Build and Serve
         run: yarn build-and-serve
       - name: Link Checker
