Create issue from file?

--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -33,3 +33,9 @@ jobs:
             "https://galaxyproject.org/jxtx/"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create Issue From File
+        uses: peter-evans/create-issue-from-file@v3
+        with:
+          title: Link Checker Report
+          content-filepath: ./lychee/out.md
+          labels: report, automated issue
