--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -1,7 +1,6 @@
 name: Check Links
 
 on:
-  # Uncomment the 'pull_request' line below to trigger the workflow in PR
   push:
   #schedule:
   #  - cron: '0 12 * * 0'
@@ -34,6 +33,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Issue From File
+        if: github.repository == ‘galaxyproject/galaxy-hub’
         uses: peter-evans/create-issue-from-file@v3
         with:
           title: Link Checker Report
