--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "node-watch": "^0.7.1",
     "prettier": "^2.4.0",
     "rehype-parse": "^8.0.3",
-    "remark": "^13.0.0",
+    "rehype-stringify": "^9.0.2",
     "remark-attr": "^0.11.1",
     "remark-frontmatter": "^3.0.0",
-    "remark-html": "^13.0.2",
     "remark-parse": "^9.0.0",
+    "remark-rehype": "^9.1.0",
     "remark-toc": "^8.0.0",
     "sass": "^1.39.2",
     "sharp": "^0.29.1",
