--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@testing-library/cypress": "^8.0.1",
     "axe-core": "^4.3.3",
     "broken-link-checker": "^0.7.8",
+    "cpy": "^8.1.2",
     "cypress": "8.4.1",
     "cypress-axe": "^0.13.0",
     "eslint": "^7.32.0",
