mdToHtml augment 2nd draft: just leave it async and make the Vue created fxn async too. - Means it only fills in the Markdown fields on load.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "remark-attr": "^0.11.1",
     "remark-frontmatter": "^3.0.0",
     "remark-parse": "^9.0.0",
-    "remark-rehype": "^9.1.0",
+    "remark-rehype": "^8.1.0",
+    "remark-stringify": "^9.0.0",
     "remark-toc": "^8.0.0",
     "sass": "^1.39.2",
     "sharp": "^0.29.1",
