--- a/.github/workflows/links-external.yml
+++ b/.github/workflows/links-external.yml
@@ -3,7 +3,7 @@ name: Check External Links
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 23 * * *'
+    - cron: "30 23 * * *"
 
 jobs:
   check_links:
