--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Cypress Tests
 on: pull_request
-concurrency: 
+concurrency:
   group: cypress-${{ github.head_ref }}
   cancel-in-progress: true
 jobs:
@@ -26,7 +26,7 @@ jobs:
         with:
           build: yarn build
           start: yarn serve
-          wait-on: 'http://localhost:8080'
+          wait-on: "http://localhost:8080"
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
