--- a/config.json
+++ b/config.json
@@ -14,7 +14,8 @@
         "dirs": {
             "md": "build/content-md",
             "vue": "build/content-vue"
-        }
+        },
+        "copyFileExts": ["png", "jpg", "jpeg", "gif", "svg", "pdf"]
     },
     "redirects": {
         "/admin/authentication/config/": "/authnz/config/",
