--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@testing-library/cypress": "^8.0.1",
     "axe-core": "^4.3.3",
     "broken-link-checker": "^0.7.8",
@@ -56,6 +58,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^7.17.0",
     "http-server": "^13.0.2",
+    "jest": "^27.3.1",
     "sass-loader": "^10.1.1",
     "start-server-and-test": "^1.14.0"
   },
