Simplify working Jest config.

--- a/package.json
+++ b/package.json
@@ -46,8 +46,6 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
     "@testing-library/cypress": "^8.0.1",
     "axe-core": "^4.3.3",
     "broken-link-checker": "^0.7.8",
@@ -65,5 +63,22 @@
   "prettier": {
     "printWidth": 120,
     "tabWidth": 4
-  }
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "mjs",
+      "js",
+      "jsx",
+      "ts",
+      "tsx",
+      "json",
+      "node"
+    ],
+    "testMatch": [
+        "**/?(*.)test.?js"
+    ],
+    "testPathIgnorePatterns": [
+        "/node_modules/", "/cypress/"
+    ]
+  },
 }
