Jest tests: Add Babel support. - Can now be run simply with $ yarn run jest

--- a/package.json
+++ b/package.json
@@ -75,10 +75,17 @@
       "node"
     ],
     "testMatch": [
-        "**/?(*.)test.?js"
+      "**/?(*.)test.?js"
     ],
     "testPathIgnorePatterns": [
-        "/node_modules/", "/cypress/"
+      "/node_modules/",
+      "/cypress/"
+    ],
+    "transform": {
+      "^.+\\.m?js$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "\\.pnp\\.[^\\/]+$"
     ]
   }
 }
