Change test file name pattern to ".tests.js"

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
       "node"
     ],
     "testMatch": [
-      "**/?(*.)test.?js"
+      "**/?(*.)tests.?js"
     ],
     "testPathIgnorePatterns": [
       "/node_modules/",
