--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Cypress Tests
+name: PR Tests
 on: pull_request
 concurrency:
-  group: cypress-${{ github.head_ref }}
+  group: primary-tests-${{ github.head_ref }}
   cancel-in-progress: true
 jobs:
-  cypress-run:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -13,7 +13,7 @@ jobs:
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
       - uses: actions/cache@v1
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
@@ -21,10 +21,30 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Install project dependencies
         run: yarn --prefer-offline
+      - name: Build static site
+        run: yarn build
+  check_links_internal:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Serve and Check Links
+        # Looks weird, but this works significantly better than running it
+        # through a single node process
+        run: yarn run serve & (sleep 5 && yarn run links:internal)
+      - name: Create Issue From File
+        uses: peter-evans/create-issue-from-file@v3
+        with:
+          issue-number: 860
+          title: Internal Link Checker Report (updated daily)
+          content-filepath: ./broken-links.md
+          labels: report, automated issue
+  cypress-run:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          build: yarn build
           start: yarn serve
           wait-on: "http://localhost:8080"
       - uses: actions/upload-artifact@v1
