--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: PR Tests
-on: pull_request
+on: 
+  pull_request:
+  workflow_dispatch:
 concurrency:
   group: primary-tests-${{ github.head_ref }}
   cancel-in-progress: true
