Test refactorin, use separate modules.  This also fixes imports in the middle of mjs, which isn't valid.

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
       "node"
     ],
     "testMatch": [
-      "**/?(*.)tests.?js"
+      "**/?(*.)test.?js"
     ],
     "testPathIgnorePatterns": [
       "/node_modules/",
