--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ concurrency:
   group: primary-tests-${{ github.head_ref }}
   cancel-in-progress: true
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,10 +25,6 @@ jobs:
         run: yarn --prefer-offline
       - name: Build static site
         run: yarn build
-  check_links_internal:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Serve and Check Links
         # Looks weird, but this works significantly better than running it
         # through a single node process
@@ -40,10 +36,6 @@ jobs:
           title: Internal Link Checker Report (updated daily)
           content-filepath: ./broken-links.md
           labels: report, automated issue
-  cypress-run:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
