--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dayjs": "^1.10.7",
     "gridsome": "^0.7.0",
     "jiti": "^1.12.0",
+    "markdownlint": "^0.24.0",
+    "markdownlint-cli": "^0.29.0",
     "node-watch": "^0.7.1",
     "prettier": "^2.4.0",
     "rehype-parse": "^8.0.3",
