Add markdownlint configuration (based on gridsome parent site at first -- we should pursue something more rigid but... baby steps)

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "develop": "src/build/run.mjs develop",
     "format": "prettier --write '*.js' 'cypress/**/*.js' 'src/**/{*.js,*.mjs,*.scss,*.vue}' '!src/.temp/**'",
     "format:check": "prettier --check '*.js' 'cypress/**/*.js' 'src/**/{*.js,*.mjs,*.scss,*.vue}' '!src/.temp/**'",
+    "markdown:lint": "markdownlint 'content/**/*.md'",
     "lint": "eslint src/**/*.{mjs,js,vue}",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
