--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -66,7 +66,7 @@ MD023: false # heading-start-left
 # like that.
 MD026: false # no-trailing-punctuation
 
-MD027: false # no-multiple-space-blockquote
+MD027: true # no-multiple-space-blockquote
 MD030: false # list-marker-space
 MD031: true # blanks-around-fences
 MD032: true # blanks-around-lists
