--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@gridsome/transformer-remark": "^0.6.4",
     "@gridsome/vue-remark": "^0.2.6",
     "axios": "^0.21.4",
+    "binary-search": "^1.3.6",
     "bootstrap": "<5.0",
     "bootstrap-vue": "^2.21.2",
     "commander": "^8.2.0",
     "dayjs": "^1.10.7",
+    "gh-badges": "^2.2.2",
     "gridsome": "^0.7.0",
     "jiti": "^1.12.0",
     "node-watch": "^0.7.1",
