--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "remark-toc": "^8.0.0",
     "sass": "^1.39.2",
     "sharp": "^0.29.1",
+    "stylus": "^0.55.0",
+    "stylus-loader": "3.0.2",
     "unified": "^10.1.0",
     "unified-engine": "^9.0.4",
     "unist-util-visit": "^4.0.0",
