--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "unified-engine": "^9.0.4",
     "unist-util-visit": "^4.0.0",
     "url-parse": "^1.5.3",
+    "vega": "^5.21.0",
+    "vega-embed": "^6.20.5",
+    "vega-lite": "^5.2.0",
     "which": "^2.0.2"
   },
   "devDependencies": {
