Add babel-core peer dependency

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:links": "start-server-and-test build-and-serve http://localhost:8080 links:internal"
   },
   "dependencies": {
+    "@babel/core": "^7.16.5",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.4",
