added covid to navbar, added covid to catgories, changed footer funding text

--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
         "/blog": "blog",
         "/events": "events",
         "/news": "news",
-        "/careers": "careers"
+        "/careers": "careers",
+        "/covid19": "covid19"
     },
     "build": {
         "dirs": {
