Fix category path for covid19 pages. - Also, fix category link rendering to actually point to path from CONFIG.

--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
         "/events": "events",
         "/news": "news",
         "/careers": "careers",
-        "/covid19": "covid19"
+        "/projects/covid19": "covid19"
     },
     "build": {
         "dirs": {
