--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "links:internal": "src/build/check-links.mjs",
     "serve": "http-server ./dist/",
     "develop": "src/build/run.mjs develop",
+    "preprocess": "src/build/preprocess.mjs preprocess",
     "format": "prettier --write '*.js' 'cypress/**/*.js' 'src/**/{*.js,*.mjs,*.scss,*.vue}' '!src/.temp/**'",
     "format:check": "prettier --check '*.js' 'cypress/**/*.js' 'src/**/{*.js,*.mjs,*.scss,*.vue}' '!src/.temp/**'",
     "markdown:lint": "markdownlint 'content/**/*.md'",
