Add some basic infrastructure for subsites.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "host": "galaxyproject.org",
     "contentDir": "content",
+    "subsites": ["us", "eu"],
     "collections": {
         "Platform": "/use/"
     },
