WIP: Add code to allow hierarchical subsites.

--- a/config.json
+++ b/config.json
@@ -1,7 +1,18 @@
 {
     "host": "galaxyproject.org",
     "contentDir": "content",
-    "subsites": ["us", "eu"],
+    "subsites": {
+        "us": {},
+        "eu": {
+            "freiburg": {},
+            "pasteur": {},
+            "belgium": {},
+            "ifb": {},
+            "genouest": {},
+            "erasmusmc": {},
+            "elixir-it": {}
+        }
+    },
     "collections": {
         "Platform": "/use/"
     },
