--- a/config.json
+++ b/config.json
@@ -2,17 +2,30 @@
     "host": "galaxyproject.org",
     "contentDir": "content",
     "subsites": {
-        "root": {
-            "us": {},
-            "eu": {
-                "freiburg": {},
-                "pasteur": {},
-                "belgium": {},
-                "ifb": {},
-                "genouest": {},
-                "erasmusmc": {},
-                "elixir-it": {}
+        "hierarchy": {
+            "root": {
+                "us": {},
+                "eu": {
+                    "freiburg": {},
+                    "pasteur": {},
+                    "belgium": {},
+                    "ifb": {},
+                    "genouest": {},
+                    "erasmusmc": {},
+                    "elixir-it": {}
+                }
             }
+        },
+        "metadata": {
+            "us": { "name": "US" },
+            "eu": { "name": "Europe" },
+            "freiburg": { "name": "Freiburg" },
+            "pasteur": { "name": "Pasteur" },
+            "belgium": { "name": "VIB" },
+            "ifb": { "name": "ELIXIR-FR/IFB" },
+            "genouest": { "name": "GenOuest" },
+            "erasmusmc": { "name": "Erasmus MC" },
+            "elixir-it": { "name": "ELIXIR-IT/Laniakea" }
         }
     },
     "collections": {
