--- a/config.json
+++ b/config.json
@@ -43,7 +43,10 @@
         },
         "shorthands": {
             "all": [
-                "global", "us", "eu", "freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it"
+                "freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it", "eu", "us", "global"
+            ],
+            "all-eu": [
+                "freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it", "eu"
             ]
         },
         "metadata": {
