Start adding "bare" article type (with no navbar, footer, etc).

--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
     "host": "galaxyproject.org",
     "contentDir": "content",
     "collections": {
-        "Platform": "/use/"
+        "Platform": "/use/",
+        "BareArticle": "/bare/"
     },
     "locale": "en-US",
     "categories": {
