Attempt to set max-old-space-size for gridsome build

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,9 @@ on:
 concurrency:
   group: publish-master
 
+env:
+  NODE_OPTIONS: --max-old-space-size=4096
+
 jobs:
   publish:
     runs-on: ubuntu-latest
