--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
 concurrency:
   group: primary-tests-${{ github.head_ref }}
   cancel-in-progress: true
+env:
+  NODE_OPTIONS: --max-old-space-size=4096
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
