--- a/.github/workflows/links-internal.yml
+++ b/.github/workflows/links-internal.yml
@@ -1,10 +1,10 @@
 name: Check Internal Links
-
 on:
   workflow_dispatch:
   schedule:
     - cron: "30 23 * * *"
-
+env:
+  NODE_OPTIONS: --max-old-space-size=4096
 jobs:
   check_links_internal:
     runs-on: ubuntu-latest
