--- a/config.json
+++ b/config.json
@@ -61,7 +61,7 @@
             },
             "eu": {
                 "name": "Europe",
-                "color": "#71684e",
+                "color": "#203e5f",
                 "order": 2
             },
             "freiburg": {
