Implement BareArticle and use it in /bare/usegalaxy-eu/main/ and its iframe. - And add functions for auto-resizing iframe heights. - Change usegalaxy.eu middle pane url prefix from /hosted/ to /bare/. - Make the middle pane a static BareArticle instead of a dynamic .vue page.

--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
     "host": "galaxyproject.org",
     "contentDir": "content",
     "collections": {
-        "Platform": "/use/",
-        "BareArticle": "/bare/"
+        "BareArticle": { "path": "/bare/", "type": "vue" },
+        "Platform": { "path": "/use/", "type": "md" }
     },
     "locale": "en-US",
     "categories": {
