--- a/config.json
+++ b/config.json
@@ -13,6 +13,7 @@
         "/careers": "careers",
         "/projects/covid19": "covid19"
     },
+    "rssCategories": ["blog", "news", "careers"],
     "build": {
         "dirs": {
             "md": "build/content-md",
