--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "commander": "^8.2.0",
     "dayjs": "^1.10.7",
     "gridsome": "^0.7.0",
+    "gridsome-plugin-feed": "^1.0.2",
     "ics": "^2.35.0",
     "jiti": "^1.12.0",
     "markdownlint": "^0.24.0",
