Allow specifying a Gitter room.

--- a/config.json
+++ b/config.json
@@ -52,51 +52,61 @@
         "metadata": {
             "global": {
                 "name": "Global",
+                "gitter": "galaxyproject/Lobby",
                 "order": 0
             },
             "us": {
                 "name": "US",
                 "color": "#4e7152",
+                "gitter": "galaxyproject/Lobby",
                 "order": 1
             },
             "eu": {
                 "name": "Europe",
                 "color": "#203e5f",
+                "gitter": "usegalaxy-eu/Lobby",
                 "order": 2
             },
             "freiburg": {
                 "name": "Freiburg",
+                "gitter": "usegalaxy-eu/Lobby",
                 "order": 3
             },
             "erasmusmc": {
                 "name": "Erasmus MC",
                 "color": "#f17925",
+                "gitter": "usegalaxy-eu/Lobby",
                 "order": 4
             },
             "belgium": {
                 "name": "VIB",
+                "gitter": "usegalaxy-eu/Lobby",
                 "order": 5
             },
             "pasteur": {
                 "name": "Pasteur",
                 "color": "#7591be",
+                "gitter": "usegalaxy-eu/Lobby",
                 "order": 6
             },
             "genouest": {
                 "name": "GenOuest",
                 "color": "white",
                 "lightBg": true,
+                "gitter": "usegalaxy-eu/Lobby",
                 "order": 7
             },
             "elixir-it": {
                 "name": "ELIXIR-IT/Laniakea",
                 "color": "#2c81bb",
+                "gitter": "usegalaxy-eu/Lobby",
                 "order": 8
             },
             "ifb": {
                 "name": "ELIXIR-FR/IFB",
                 "color": "white",
                 "lightBg": true,
+                "gitter": "usegalaxy-eu/Lobby",
                 "order": 9
             }
         }
