--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@gridsome/plugin-sitemap": "^0.4.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.4",
+    "@gridsome/transformer-yaml": "^0.2.1",
     "@gridsome/vue-remark": "^0.2.6",
     "axios": "^0.21.4",
     "binary-search": "^1.3.6",
