--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gridsome-plugin-feed": "^1.0.2",
     "ics": "^2.35.0",
     "jiti": "^1.12.0",
+    "lodash": "^4.17.21",
     "markdownlint": "^0.24.0",
     "markdownlint-cli": "^0.29.0",
     "node-watch": "^0.7.1",
