--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "gridhub",
+  "name": "galaxy-hub",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/galaxyproject/galaxy-hub.git"
+  },
   "scripts": {
     "build": "src/build/run.mjs build",
     "links:internal": "src/build/check-links.mjs",
