--- a/content/us/navbar.yml
+++ b/content/us/navbar.yml
@@ -1,2 +1,9 @@
 style:
   color: "#4e7152"
+left:
+- label: News
+  relativeTo: subsite
+  target: news/
+- label: Events
+  relativeTo: subsite
+  target: events/
