--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vega": "^5.21.0",
     "vega-embed": "^6.20.5",
     "vega-lite": "^5.2.0",
+    "vue-tweet-embed": "^2.4.0",
     "which": "^2.0.2"
   },
   "devDependencies": {
