--- a/config.json
+++ b/config.json
@@ -29,14 +29,14 @@
     "subsites": {
         "shorthands": {
             "all": [
-                "freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it", "eu", "us", "global"
+                "freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it", "eu", "us", "global", "india"
             ],
             "all-eu": [
                 "freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it", "eu"
             ]
         },
         "default": "global",
-        "navbar": ["global", "us", "eu", "freiburg", "erasmusmc", "belgium", "pasteur", "genouest", "elixir-it", "ifb"],
+        "navbar": ["global", "us", "eu", "freiburg", "erasmusmc", "belgium", "pasteur", "genouest", "elixir-it", "ifb", "india"],
         "all": {
             "global": {
                 "name": "Global",
@@ -77,6 +77,10 @@
             "ifb": {
                 "name": "ELIXIR-FR/IFB",
                 "gitter": "usegalaxy-eu/Lobby"
+            },
+            "india": {
+                "name": "India",
+                "gitter": "usegalaxy-in/adda"
             }
         }
     },
