--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,2 @@
-content/community/coc/     @assuntad23 @beatrizserrano @frederikcoppens @hexylena @fubar2
+*                           @galaxyproject/hubeditors
+content/community/coc/      @assuntad23 @beatrizserrano @frederikcoppens @hexylena @fubar2
